--- a/index.html
+++ b/index.html
@@ -1,50 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Single Price Grid Component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>Single Price Grid Component</title>
+
+
 </head>
+
+<!-- MAIN CONTENT -->
+
 <body>
-  Join our community
 
-  30-day, hassle-free money back guarantee
+  <div class="main_container">
 
-  Gain access to our full library of tutorials along with expert code reviews. 
-  Perfect for any developers who are serious about honing their skills.
+    <!-- CONTAINER,GRID -->
+    <div class="grid_container grid">
 
-  Monthly Subscription
+      <div class="join_container">
+        <p>Join our community</p>
+        <p>30-day, hassle-free money back guarantee</p>
+        <p>
+          Gain access to our full library of tutorials along with expert code reviews.
+          Perfect for any developers who are serious about honing their skills.
+        </p>
+      </div>
 
-  &dollar;29 per month
+      <div class="subscription_container">
+        <p>Monthly Subscription</p>
+        <p>&dollar;29 <span>per month</span></p>
+        <p>Full access for less than &dollar;1 a day</p>
+        <div class="sign_up">
+          <a href="#" class="button_sign_up">Sign up</a>
+        </div>
+      </div>
 
-  Full access for less than &dollar;1 a day
+      <div class="why_us_container">
+        <p>Why Us</p>
+        <p>
+          Tutorials by industry experts
+          Peer &amp; expert code review
+          Coding exercises
+          Access to our GitHub repos
+          Community forum
+          Flashcard decks
+          New videos every week
+        </p>
+      </div>
 
-  Sign Up
+    </div>
 
-  Why Us
-
-  Tutorials by industry experts
-  Peer &amp; expert code review
-  Coding exercises
-  Access to our GitHub repos
-  Community forum
-  Flashcard decks
-  New videos every week
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+  </div>
 </body>
+
 </html>
